--- a/resource-service/build.gradle
+++ b/resource-service/build.gradle
@@ -8,6 +8,10 @@ group = 'com.ilyastuit.microservice'
 version = '0.0.1'
 sourceCompatibility = '17'
 
+ext {
+	set('springCloudVersion', "2021.0.3")
+}
+
 repositories {
 	mavenCentral()
 }
@@ -16,6 +20,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka'
+	implementation 'org.springframework.cloud:spring-cloud-stream-binder-kafka-streams'
 
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
@@ -27,6 +35,12 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+	}
 }
 
 tasks.withType(Test) {
