--- a/resource-service/src/main/resources/application-dev.yaml
+++ b/resource-service/src/main/resources/application-dev.yaml
@@ -20,3 +20,15 @@ aws:
 
   s3:
     bucket-name: songs
+
+kafka:
+  server:
+    localhost:9092
+  producer:
+    name: resources
+
+logging:
+  level:
+    root: INFO
+    org.springframework: INFO
+    org.apache.kafka: INFO
