--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: '3.6'
 services:
   localstack:
     container_name: localstack
-    image: localstack/localstack:latest
+    image: localstack/localstack:0.12.19
     environment:
       - DEBUG=1
       - LOCALSTACK_HOSTNAME=localhost
@@ -17,6 +17,7 @@ services:
       - KINESIS_PROVIDER=kinesalite
       - AWS_ACCESS_KEY_ID=test
       - AWS_SECRET_ACCESS_KEY=test
+      - SKIP_SSL_CERT_DOWNLOAD=1
     ports:
       - "4566:4566"
     volumes:
@@ -38,14 +39,15 @@ services:
     container_name: kafka
     ports:
       - "9092:9092"
-    expose:
-      - "9093"
+    links:
+      - zookeeper:zookeeper
     environment:
       KAFKA_LISTENERS: DOCKER_NET://0.0.0.0:9093,HOST_NET://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: DOCKER_NET://kafka:9093,HOST_NET://localhost:9092
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: DOCKER_NET:PLAINTEXT,HOST_NET:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: DOCKER_NET
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_CREATE_TOPICS: "resources:1:1"
     networks:
       - kafka_network
