--- a/resource-processor/build.gradle
+++ b/resource-processor/build.gradle
@@ -18,7 +18,8 @@ ext {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-stream'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.kafka:spring-kafka'
 
 	implementation 'com.mpatric:mp3agic:0.9.1'
 
