--- a/resource-processor/src/main/resources/application-dev.yaml
+++ b/resource-processor/src/main/resources/application-dev.yaml
@@ -1,13 +1,13 @@
 
 services:
   song-service:
-    url: http://localhost:8081
+    url: http://song-service:8081
   resource-service:
-    url: http://localhost:8080
+    url: http://resource-service:8082
 
 kafka:
   server:
-    localhost:9092
+    kafka:9092
   group:
     id: server.broadcast
   producer:
