--- a/resource-service/build.gradle
+++ b/resource-service/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'com.ilyastuit.microservice'
-version = '0.0.1'
+version = ''
 sourceCompatibility = '17'
 
 ext {
@@ -14,6 +14,15 @@ ext {
 
 repositories {
 	mavenCentral()
+}
+
+
+jar {
+	archivesBaseName = 'resource-service'
+
+	manifest {
+		attributes('Main-Class': 'com.ilyastuit.microservice.resourceservice.ResourceServiceApplication')
+	}
 }
 
 dependencies {
