--- a/resource-service/src/main/resources/application-dev.yaml
+++ b/resource-service/src/main/resources/application-dev.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:54321/resources
+    url: jdbc:postgresql://resource-database:5432/resources
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
@@ -9,11 +9,11 @@ spring:
     generate-ddl: on
   servlet:
     multipart:
-      max-file-size: 10MB
-      max-request-size: 10MB
+      max-file-size: 20MB
+      max-request-size: 20MB
 
 aws:
-  url: http://localhost:4566
+  url: http://localstack:4566
   access-key: test
   secret: test
   region: us-west-2
@@ -23,7 +23,7 @@ aws:
 
 kafka:
   server:
-    localhost:9092
+    kafka:9092
   producer:
     name: resources
 
